// ================================================================
// Agentic Cookbook — Database Schema (DBML)
// Paste this entire file at: https://dbdiagram.io/d
// ================================================================

// ----------------------------------------------------------------
// BETTER AUTH TABLES (auto-generated by Better Auth)
// Run: npx auth@latest migrate — do NOT create these manually
// ----------------------------------------------------------------

Table user {
  id text [pk]
  name text [not null]
  email text [not null, unique]
  email_verified boolean [not null, default: false]
  image text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Core identity table. Managed by Better Auth. FastAPI reads but never writes directly.'
}

Table session {
  id text [pk]
  user_id text [not null, ref: > user.id]
  token text [not null, unique]
  expires_at timestamptz [not null]
  ip_address text
  user_agent text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Session tokens. Expires after 7 days. Managed by Better Auth.'
}

Table account {
  id text [pk]
  user_id text [not null, ref: > user.id]
  account_id text [not null]
  provider_id text [not null]
  access_token text
  refresh_token text
  id_token text
  access_token_expires_at timestamptz
  refresh_token_expires_at timestamptz
  scope text
  password text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'OAuth + email/password credentials. Managed by Better Auth.'
}

Table verification {
  id text [pk]
  identifier text [not null]
  value text [not null]
  expires_at timestamptz [not null]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Note: 'Created by Better Auth. Email verification is DISABLED in this app (requireEmailVerification: false). Table exists but is not actively used — retained in case password-reset flow is added later. Managed by Better Auth.'
}

Table jwks {
  id text [pk]
  public_key text [not null]
  private_key text [not null]
  created_at timestamptz [not null, default: `now()`]

  Note: 'RS256 key pairs for JWT signing. Exposed at /api/auth/jwks. FastAPI caches + verifies against this. Created by Better Auth JWT plugin.'
}

// ----------------------------------------------------------------
// APP TABLES (custom — managed via Alembic migrations)
// ----------------------------------------------------------------

Table conversation {
  id text [pk]
  user_id text [not null, ref: > user.id]
  title text [note: 'First user message, truncated to 60 chars']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    user_id [name: 'idx_conversation_user_id']
    (updated_at) [name: 'idx_conversation_updated_at']
  }

  Note: 'A chat session. Deleted on account deletion (cascade).'
}

Table message {
  id text [pk]
  conversation_id text [not null, ref: > conversation.id]
  role text [not null, note: 'user | assistant']
  content text [not null, note: 'Plain text content or assistant intro sentence']
  image_url text [note: 'Pexels image URL (assistant messages only)']
  metadata jsonb [note: 'Full recipe JSON: {message, recipe:{title, ingredients, instructions, ...}, image:{url, photographer, ...}}']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    conversation_id [name: 'idx_message_conversation_id']
    (created_at) [name: 'idx_message_created_at']
  }

  Note: 'Individual turns in a conversation. Deleted on conversation delete (cascade).'
}

// ----------------------------------------------------------------
// GDPR / CCPA COMPLIANCE TABLES
// ----------------------------------------------------------------

Table consent_log {
  id text [pk]
  user_id text [ref: > user.id, note: 'Nullable — consent may be logged before sign-in']
  consent_type text [not null, note: 'essential | analytics']
  granted boolean [not null]
  ip_address_hash text [note: 'SHA-256 hash of raw IP — never store raw IP']
  user_agent text
  granted_at timestamptz [not null, default: `now()`]
  revoked_at timestamptz [note: 'Set when user withdraws consent']

  indexes {
    user_id [name: 'idx_consent_log_user_id']
  }

  Note: 'GDPR/CCPA consent audit trail. Retained 3 years even after account deletion (user_id anonymised).'
}

Table data_deletion_request {
  id text [pk]
  user_id text [not null, ref: > user.id]
  requested_at timestamptz [not null, default: `now()`]
  completed_at timestamptz
  status text [not null, default: 'pending', note: 'pending | processing | completed | failed']

  indexes {
    status [name: 'idx_deletion_status']
  }

  Note: 'GDPR Right to Erasure queue. Processed within 30 days of request. Retained 3 years for audit.'
}

// ================================================================
// RELATIONSHIP SUMMARY
// ================================================================
//
//  user          1 ---< session               (1:N — has many sessions)
//  user          1 ---< account               (1:N — has many auth methods)
//  user          1 ---< conversation          (1:N — has many chat sessions)
//  user          1 ---< consent_log           (1:N — has many consent events)
//  user          1 ---< data_deletion_request (1:N — can request deletion)
//  conversation  1 ---< message               (1:N — contains many messages)
//  verification  standalone                   (no user FK — identifier = email string)
//  jwks          standalone                   (global key store, no user FK)
//
// ================================================================
// DATA RETENTION
// ================================================================
//
//  user                    Until deletion completed + 30-day grace period
//  session                 7 days (auto-expire via Better Auth)
//  account                 Until user deleted
//  conversation            Until user deletes or account deleted (cascade)
//  message                 Same as conversation (cascade)
//  consent_log             3 years (legal requirement; user_id anonymised on deletion)
//  data_deletion_request   3 years (audit trail)
//  jwks                    Rotated by Better Auth automatically
//
// ================================================================
// NEON CONNECTION STRINGS
// ================================================================
//
//  Next.js (Better Auth):  postgresql://user:pass@ep-xxx-pooler.region.aws.neon.tech/neondb?sslmode=require
//  FastAPI (asyncpg):      postgresql+asyncpg://user:pass@ep-xxx.region.aws.neon.tech/neondb
//
//  Use the POOLER URL for serverless/edge (Next.js)
//  Use the DIRECT URL for long-lived connections (FastAPI)
// ================================================================
